SAKIII-4129 Tweaks to the templategenerator widget * Added in the validation framework * Removed unnecessary comments, as the code is quite readable on its own * Updated the bundle string for the message * Added some fields that are in use in the templates to the data generated * Fixed a bug where the template generated would not have the correct set of pages

--- a/devwidgets/templategenerator/css/templategenerator.css
+++ b/devwidgets/templategenerator/css/templategenerator.css
@@ -37,10 +37,7 @@
 .templategenerator_widget.s3d-widget-content #templategenerator_export {display:none;}
 
 /* Error */
-.templategenerator_widget.s3d-widget-content label.error {color:#9F3333 !important;}
 .templategenerator_widget.s3d-widget-content h1 {font-size:18px;font-weight:normal;color:#7c7c7c;}
 .templategenerator_widget.s3d-widget-content h1 + hr {border:none;border-top:1px solid #A9A9A9;background:none;}
 .templategenerator_widget.s3d-widget-content {width:480px !important;margin-left:-280px !important;}
-.templategenerator_widget.s3d-widget-content label {display:block;color:#424242;font-size:12px;margin:12px 0 2px;}
-.templategenerator_widget.s3d-widget-content input, .templategenerator_widget.s3d-widget-content textarea {border:1px solid #A9A9A9;height:20px;margin-top:3px;width:100%;}
 .templategenerator_widget.s3d-widget-content textarea {height:60px;resize:none;}
